--- a/index.html
+++ b/index.html
@@ -110,9 +110,12 @@
 				<div class="container">
 					<h2 class="title">Чем мы занимаемся</h2>
 					<ul class="images">
-						<li><img src="./images/box-1.jpg" alt="Программирование" width="370" height="294" /></li>
-						<li><img src="./images/box-2.jpg" alt="Интерфейс" width="370" height="294" /></li>
-						<li><img src="./images/box-3.jpg" alt="Веб-дизайн" width="370" height="294" /></li>
+						<li><div class="images-thumb"><img class="images-img" src="./images/box-1.jpg" alt="Программирование" width="370" height="294" />
+						<p class="images-text">Десктопные приложения</p></div></li>
+						<li><div class="images-thumb"><img class="images-img" src="./images/box-2.jpg" alt="Интерфейс" width="370" height="294" />
+						<p class="images-text">Мобильные приложения</p></div></li>
+						<li><div class="images-thumb"><img class="images-img" src="./images/box-3.jpg" alt="Веб-дизайн" width="370" height="294" />
+						<p class="images-text">Дизайнерские решения</p></div></li>
 					</ul>
 				</div>
 			</section>
