--- a/portfolio.html
+++ b/portfolio.html
@@ -65,7 +65,11 @@
 					<!-- Проекты -->
 					<ul class="project">
 						<li>
-							<a class="project-link" href=""><img src="./images/project-1.jpg" alt="Технокряк" width="370" />
+							<a class="project-link" href="">
+								<div class="project-thumb">
+									<img src="./images/project-1.jpg" alt="Технокряк" width="370" />
+									<p class="overlay-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+								</div>
 								<div class="project-subject">
 									<h2 class="project-title">Технокряк</h2>
 									<p class="project-text">Веб-сайт</p>
@@ -73,7 +77,11 @@
 							</a>
 						</li>
 						<li>
-							<a class="project-link" href=""><img src="./images/project-2.jpg" alt="Постер" width="370" />
+							<a class="project-link" href="">
+								<div class="project-thumb">
+									<img src="./images/project-2.jpg" alt="Постер" width="370" />
+									<p class="overlay-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+								</div>
 								<div class="project-subject">
 									<h2 class="project-title">Постер New Orlean vs Golden Star</h2>
 									<p class="project-text">Дизайн</p>
@@ -81,7 +89,11 @@
 							</a>
 						</li>
 						<li>
-							<a class="project-link" href=""><img src="./images/project-3.jpg" alt="Ресторан Seafood" width="370" />
+							<a class="project-link" href="">
+								<div class="project-thumb">
+									<img src="./images/project-3.jpg" alt="Ресторан Seafood" width="370" />
+									<p class="overlay-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+								</div>
 								<div class="project-subject">
 									<h2 class="project-title">Ресторан Seafood</h2>
 									<p class="project-text">Приложение</p>
@@ -89,7 +101,11 @@
 							</a>	
 						</li>
 						<li>
-							<a class="project-link" href=""><img src="./images/project-4.jpg" alt="Проект Prime" width="370" />
+							<a class="project-link" href="">
+								<div class="project-thumb">
+									<img src="./images/project-4.jpg" alt="Проект Prime" width="370" />
+									<p class="overlay-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+								</div>
 								<div class="project-subject">
 									<h2 class="project-title">Проект Prime</h2>
 									<p class="project-text">Маркетинг</p>
@@ -97,7 +113,11 @@
 							</a>	
 						</li>
 						<li>
-							<a class="project-link" href=""><img src="./images/project-5.jpg" alt="Проект Boxes" width="370" />
+							<a class="project-link" href="">
+								<div class="project-thumb">
+									<img src="./images/project-5.jpg" alt="Проект Boxes" width="370" />
+									<p class="overlay-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+								</div>
 								<div class="project-subject">
 									<h2 class="project-title">Проект Boxes</h2>
 									<p class="project-text">Приложение</p>
@@ -105,7 +125,11 @@
 							</a>	
 						</li>
 						<li>
-							<a class="project-link" href=""><img src="./images/project-6.jpg" alt="Веб-сайт" width="370" />
+							<a class="project-link" href="">
+								<div class="project-thumb">
+									<img src="./images/project-6.jpg" alt="Веб-сайт" width="370" />
+									<p class="overlay-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+								</div>
 								<div class="project-subject">
 									<h2 lang="en" class="project-title">Inspiration has no Borders</h2>
 									<p class="project-text">Веб-сайт</p>
@@ -113,7 +137,11 @@
 							</a>
 						</li>
 						<li>
-							<a class="project-link" href=""><img src="./images/project-7.jpg" alt="Издание Limited Edition" width="370" />
+							<a class="project-link" href="">
+								<div class="project-thumb">
+									<img src="./images/project-7.jpg" alt="Издание Limited Edition" width="370" />
+									<p class="overlay-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+								</div>
 								<div class="project-subject">
 									<h2 class="project-title">Издание Limited Edition</h2>
 									<p class="project-text">Дизайн</p>
@@ -121,7 +149,11 @@
 							</a>
 						</li>
 						<li>
-							<a class="project-link" href=""><img src="./images/project-8.jpg" alt="Проект LAB" width="370" />
+							<a class="project-link" href="">
+								<div class="project-thumb">
+									<img src="./images/project-8.jpg" alt="Проект LAB" width="370" />
+									<p class="overlay-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+								</div>
 								<div class="project-subject">
 									<h2 class="project-title">Проект LAB</h2>
 									<p class="project-text">Маркетинг</p>
@@ -129,7 +161,11 @@
 							</a>
 						</li>
 						<li>
-							<a class="project-link" href=""><img src="./images/project-9.jpg" alt="Приложение" width="370" />
+							<a class="project-link" href="">
+								<div class="project-thumb">
+									<img src="./images/project-9.jpg" alt="Приложение" width="370" />
+									<p class="overlay-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+								</div>
 								<div class="project-subject">
 									<h2 lang="en" class="project-title">Growing Business</h2>
 									<p class="project-text">Приложение</p>
