--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 					<br />
 					для вашего бизнеса
 				</h1>
-				<button type="button" class="hero-button">Заказать услугу</button>
+				<button data-modal-open type="button" class="hero-button">Заказать услугу</button>
 			</section>
 
 			<!-- Особенности -->
@@ -322,5 +322,12 @@
 				</div>
 			</div>
 		</footer>
+		<div class="backdrop is-hidden" data-modal>
+			<div class="modal">
+				<button data-modal-close class="modal-close"><svg width="10px" height="10px"><use href="./images/symbol-defs.svg#close"></use></svg></button>
+
+			</div>
+		</div>
+		<script src="./js/modal.js"></script>
 	</body>
 </html>
